
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PTRACE_KILL ;
 int die (int,char*) ;
 int ptrace (int ,int,int ,int ) ;
 int wait (int *) ;

void stop_debug(int pid) {
        if(ptrace(PTRACE_KILL,pid,0,0) == -1)
         die(1,"ptrace()");

 wait(((void*)0));
}
